[project]
name = "toon-proxy"
version = "0.1.0"
description = "MCP stdio proxy that rewrites JSON tool outputs to TOON format"
requires-python = ">=3.10"
dependencies = ["python-toon"]

[project.scripts]
toon-proxy = "toon_proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["toon_proxy.py"]
